Fixed spacing finally

--- a/src/pages/FoodsPage.css
+++ b/src/pages/FoodsPage.css
@@ -27,12 +27,14 @@
 }
 
 .itemContent {
-  height: 70px;
+  height: 90px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  width: 85%;
+  padding-left: 10px;
+  padding-top: 20px;
   user-select: none;
 }
 
